[package]
name = "gatherer_mes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & HTTP
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }

# Async Runtime
tokio = { version = "1.46.1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "chrono"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# CLI & Configuration
clap = { version = "4.5.41", features = ["derive", "env"] }
dotenv = "0.15.0"

# Logging & Tracing
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Date/Time & Utilities
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.4"

# Error Handling
anyhow = "1.0.98"

# gRPC 
tonic = "0.13.1"
prost = "0.14.1"
tonic-reflection = "0.13.1"
time = { version = "0.3.41", features = ["serde"] }
axum-test = "17.3.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
tonic-build = "0.13.1"
